Fix diff table spacing around sidebar

--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,18 @@ table td:has(img.animation-display) {
 	animation-delay: 0s;
 }
 
+.changelog table {
+	max-width: 100%;
+	display: flex;
+	flex-wrap: nowrap;
+	flex: 1;
+}
+
+.changelog table tbody {
+	display: table;
+	width: 100%;
+}
+
 .changelog > * {
 	margin-left: 10px;
 	margin-top: 5px;
@@ -127,7 +139,7 @@ table td:has(img.animation-display) {
 }
 
 .diff-container {
-	width: 100%;
+	max-width: 100%;
 	margin: 5px;
 	margin-left: 20px;
 	table-layout: fixed;
